# IataaCppIA

./: CMakeLists.txt  README.md  main.cpp
DTO/: AbstractDTO.cpp  AbstractDTO.h  MoveDTO.cpp  MoveDTO.h  NewGameDTO.cpp  NewGameDTO.h  StatusDTO.cpp  StatusDTO.h
REST/: AIHandler.cpp  AIHandler.h
domain/: Beach.cpp  Beach.h  Difficulty.cpp  Difficulty.h  Player.h
domain/enumeration/: BoardSquareType.cpp  BoardSquareType.h  CodeEndGame.cpp  CodeEndGame.h  Difficulty.cpp  Difficulty.h  FalseEnum.h  Player.cpp  Player.h  State.cpp  State.h  Status.cpp  Status.h
domain/tools/: Converter.cpp  Converter.h  RandomTextGenerator.h  randomTextGenerator.h
